fixed one spacing issue

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -103,7 +103,7 @@ body {
 
 .nameAndTitle{
 	flex-direction:column;
-	width:60%;
+	width:65%;
 	justify-content:center;
 	padding-left:10%;
 	letter-spacing:5px;
